[package]
name = "toucan-rs"
description = """
A port of toucan-js to Rust.
"""
keywords = ["toucan", "cloudflare", "sentry", "tracing"]
authors = ["Abid Omar <contact@omarabid.com>"]
version = "1.0.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/omarabid/toucan-rs"
documentation  = "https://docs.rs/toucan-rs"
repository = "https://github.com/omarabid/toucan-rs"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.93"
worker = "0.3.4"
thiserror = "1.0.63"
